@@ -1,0 +1,9 @@
+                 AUDIO SYNC TEST 
+
+This test flashes the whole screen white for a
+frame, along with a 1khz test tone.
+
+You can verify the sync between audio and video
+with recording equipment or specialized hardware.
+
+It can be paused with the #GA#G button.
